syntax = "proto3";

package meta;
option go_package = "";

import "types.proto"

service CustomObjectService {
  rpc Create(CustomObject) returns (CustomObject) {}
  rpc Update(CustomObject) returns (CustomObject) {}
  rpc FindOne(FindCustomObjectRequest) returns (CustomObject) {}
  rpc Delete(DeleteCustomObjectRequest) returns (CustomObject) {}
}

message FindCustomObjectRequest {
  string objId = 1;
}

message DeleteCustomObjectRequest {
  string objId = 1;
}
